Issue #SB-25202 Correction of alignment issues and styling modal in Portal

--- a/src/app/client/src/assets/styles/components/_modal.scss
+++ b/src/app/client/src/assets/styles/components/_modal.scss
@@ -188,6 +188,9 @@
 
   .modals.dimmer .ui.scrolling.modal {
     position: fixed !important;
+    @include respond-below(sm) {
+      height: auto;
+    }
   }
 }
 
